packages/typ/tests/fixtures/diagnostics/0316_fun_explicit_poly_returns_int_08.ml.expected
File "0316_fun_explicit_poly_returns_int_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0316_fun_explicit_poly_returns_int_08 is not a valid module name.

File "0316_fun_explicit_poly_returns_int_08.ml", line 1, characters 31-41:
1 | let bad_theta : 'a. 'a -> 'a = fun _ -> 7
                                   ^^^^^^^^^^
Error: This definition has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
